# rust-lc3-sim

./: .gitignore  Cargo.toml  README.md
benches/: bench.rs
src/: main.rs
src/simulator/: instruction.rs  mod.rs  prediction.rs  reader.rs  tracer.rs  writer.rs
