[package]
name = "rust_lc3_simulator"
version = "0.1.0"
authors = ["Josh Hill <josh.hill189@gmail.com>"]
edition = "2018"

[lib]
name = "lc3simlib"
path = "src/lib.rs"

[[bin]]
name = "lc3sim"
path = "bin/main.rs"

[dependencies]
clap = "*"
crossterm = "0.9"

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "bench"
harness = false
